# industria

./: .bzrignore  .gitignore  ANNOUNCE.vicare-scheme  LICENSE.txt  Makefile.am  NEWS  README  README.md  README.vicare-scheme  compile-all.sps  configure.ac  configure.sh  prepare.sh  release-tool
documentation/: Makefile.am  binfmt.texinfo  compression.texinfo  crypto.texinfo  demos.texinfo  disassembler.texinfo  industria.texinfo  net-ssh.texinfo  net.texinfo  starting.texinfo  struct.texinfo  text.texinfo  types.texinfo  x86.txt
lib/: dependencies.make  libraries.scm
lib/weinholt/assembler/: elf.sls  x86-misc.sls  x86.sls
lib/weinholt/compression/: huffman.sls  inflate.sls  lzma.sls  xz.sls  zip.sls
lib/weinholt/compression/zip/: extra.ikarus.sls  extra.sls  extra.ypsilon.sls
lib/weinholt/crypto/: arcfour.sls  dsa.sls  ec.sls  entropy.sls  math.sls  openpgp.sls  password.sls  rsa.sls  sha-2.sls  ssh-public-key.sls
lib/weinholt/crypto/ec/: dsa.sls
lib/weinholt/disassembler/: i8080.sls  mips.sls  x86.sls
lib/weinholt/net/: dns.sls  tcp.ironscheme.sls  tcp.larceny.sls  tcp.mosh.sls  tcp.sagittarius.sls  tcp.sls  tcp.ypsilon.sls  tls.sls
lib/weinholt/net/dns/: numbers.sls  private.sls
lib/weinholt/net/irc/: fish.sls
lib/weinholt/net/ssh/: algorithms.sls  connection.sls  private.sls  userauth.sls
lib/weinholt/text/: hexdump.sls  internet.sls
meta/scripts/: build-makefile-rules.sps  compile-nausicaa.sps  vicare-template-process-functions
programs/: checksig  checksum  domain  fcdisasm  honingsburk  meircbot  secsh-client  sunzip  szip  tarinfo  tls-client  x86-demo  x86-linux-demo
tests/: Makefile.am  aes.sps  arcfour.sps  base.sps  blowfish.sps  cpu12disasm.sps  crc.sps  der.sps  des.sps  dh.sps  dns.sps  dsa.sps  ecdsa.sps  gzip.sps  hmac.sps  huffman.sps  ipaddrs.sps  irc.sps  md5.sps  otr.sps  pack.sps  password.sps  punycode.sps  sha-1.sps  sha-256.sps  sha-512.sps  ssh-kex.sps  uuid.sps  x509.sps  x86asm.sps  x86disasm.sps  zlib.sps
weinholt/: bytevectors.sls
weinholt/archive/: tar.sls
weinholt/assembler/: elf.sls  x86-misc.sls  x86-operands.sls  x86.sls
weinholt/binfmt/: elf.sls
weinholt/compression/: adler-32.sls  bitstream.sls  gzip.sls  huffman.sls  inflate.sls  lzma.sls  lzma2.sls  sliding-buffer.sls  xz.sls  zip.sls  zlib.sls
weinholt/compression/zip/: extra.ikarus.sls  extra.sls  extra.vicare.sls  extra.ypsilon.sls
weinholt/crypto/: aes.sls  arcfour.sls  blowfish.sls  crc.sls  des.sls  dh.sls  dsa.sls  ec.sls  entropy.sls  hmac.sls  math.sls  md5.sls  openpgp.sls  password.sls  rsa.sls  sha-1.sls  sha-2.sls  ssh-public-key.sls  uuid.sls  x509.sls
weinholt/crypto/aes/: private.sls
weinholt/crypto/ec/: dsa.sls
weinholt/disassembler/: i8080.sls  m68hc12.sls  mips.sls  private.sls  x86-opcodes.sls  x86.sls
weinholt/net/: buffer.sls  dns.sls  irc.sls  otr.sls  ssh.sls  tcp.chezscheme.sls  tcp.guile.sls  tcp.ikarus.sls  tcp.ironscheme.sls  tcp.larceny.sls  tcp.mosh.sls  tcp.mzscheme.sls  tcp.sls  tcp.vicare.sls  tls.sls
weinholt/net/dns/: numbers.sls  private.sls  types.sls
weinholt/net/irc/: fish.sls
weinholt/net/ssh/: algorithms.sls  connection.sls  kex-dh-gex.sls  kexdh.sls  private.sls  transport.sls  userauth.sls
weinholt/net/tls/: algorithms.sls  simple.sls
weinholt/struct/: der.sls  pack-aux.sls  pack.sls
weinholt/text/: base64.sls  hexdump.sls  internet.sls  punycode.sls  random-art.sls  strings.sls
