## Process this file with automake to produce Makefile.in

AM_MAKEINFOFLAGS	= --no-split

info_TEXINFOS		= industria.texinfo
nausicaa_oopp_TEXINFOS	= \
	binfmt.texinfo					\
	compression.texinfo				\
	crypto.texinfo					\
	demos.texinfo					\
	disassembler.texinfo				\
	net-ssh.texinfo					\
	net.texinfo					\
	starting.texinfo				\
	struct.texinfo					\
	text.texinfo					\
	types.texinfo

### end of file
